<resources>
    <string name="app_name">OkDriver Sensors</string>
    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_events">Events</string>
    <string name="tab_battery">Battery</string>
    <string name="dashboard_title">Live Sensor Dashboard</string>
    <string name="dashboard_status_label">Monitoring status:</string>
    <string name="dashboard_elapsed_label">Elapsed:</string>
    <string name="dashboard_elapsed_default">00:00</string>
    <string name="dashboard_motion_label">Motion: %1$s</string>
    <string name="dashboard_sampling_label">Sampling: %1$s</string>
    <string name="dashboard_gps_interval_label">GPS interval: %1$s</string>
    <string name="dashboard_optimization_label">Optimization: %1$s</string>
    <string name="motion_moving">MOVING</string>
    <string name="motion_stationary">STATIONARY</string>
    <string name="motion_unknown">UNKNOWN</string>
    <string name="sampling_fast">FAST</string>
    <string name="sampling_slow">SLOW</string>
    <string name="gps_interval_seconds">%1$.2fs</string>
    <string name="action_start_monitoring">Start Monitoring</string>
    <string name="action_stop_monitoring">Stop Monitoring</string>
    <string name="dashboard_sensor_unavailable">Sensor unavailable on this device: %1$s</string>
    <string name="dashboard_accel_format">Accelerometer\nx: %1$s  y: %2$s  z: %3$s</string>
    <string name="dashboard_gyro_format">Gyroscope\nx: %1$s  y: %2$s  z: %3$s</string>
    <string name="dashboard_mag_format">Magnetometer\nx: %1$s  y: %2$s  z: %3$s</string>
    <string name="sensor_name_accelerometer">Accelerometer</string>
    <string name="sensor_name_gyroscope">Gyroscope</string>
    <string name="sensor_name_magnetometer">Magnetometer</string>
    <string name="gps_status_available">GPS status: Available</string>
    <string name="gps_status_permission_denied">GPS unavailable (permission denied)</string>
    <string name="gps_status_provider_disabled">GPS unavailable (location provider disabled)</string>
    <string name="gps_status_unavailable">GPS unavailable</string>
    <string name="gps_lat_lon_format">Latitude: %1$s\nLongitude: %2$s</string>
    <string name="gps_speed_format">Speed: %1$s km/h</string>
    <string name="gps_accuracy_format">Accuracy: %1$s m</string>
    <string name="gps_lat_lon_placeholder">Latitude: --\nLongitude: --</string>
    <string name="gps_speed_placeholder">Speed: -- km/h</string>
    <string name="gps_accuracy_placeholder">Accuracy: -- m</string>
    <string name="events_title">Driving Events</string>
    <string name="events_subtitle">Detected harsh acceleration, braking, and turn events will appear below.</string>
    <string name="events_empty_state">No events yet. Start monitoring.</string>
    <string name="events_clear_button">Clear Events</string>
    <string name="events_cleared_toast">Events cleared.</string>
    <string name="event_timestamp_format">Time: %1$s</string>
    <string name="event_type_format">Type: %1$s</string>
    <string name="event_severity_format">Severity: %1$.2f</string>
    <string name="event_speed_format">Speed: %1$.2f km/h</string>
    <string name="event_speed_not_available">Speed: N/A</string>
    <string name="event_type_harsh_accel">Harsh Acceleration</string>
    <string name="event_type_harsh_brake">Harsh Braking</string>
    <string name="event_type_sharp_turn">Sharp Turn</string>
    <string name="battery_title">Battery Usage</string>
    <string name="battery_monitoring_status_label">Monitoring status:</string>
    <string name="battery_status_off">OFF</string>
    <string name="battery_start_battery_label">Start battery:</string>
    <string name="battery_start_time_label">Start time:</string>
    <string name="battery_elapsed_label">Elapsed:</string>
    <string name="battery_baseline_placeholder">--</string>
    <string name="battery_report_label">30-minute drain report:</string>
    <string name="battery_report_waiting">Battery report will be available after 30 minutes of monitoring.</string>
    <string name="battery_end_battery_label">End battery:</string>
    <string name="battery_end_time_label">End time:</string>
    <string name="battery_drain_label">Drain over 30 minutes:</string>
    <string name="battery_time_placeholder">--</string>
    <string name="battery_value_placeholder">--</string>
</resources>
